# ----------------------------------------------------------------------------------------#
# Add comm-study
# ----------------------------------------------------------------------------------------#

message(STATUS "Adding comm-study...")
add_subdirectory(comm-study)

# ----------------------------------------------------------------------------------------#
# Add heat equation demo
# ----------------------------------------------------------------------------------------#

message(STATUS "Adding heat-equation...")
add_subdirectory(heat-equation)

# ----------------------------------------------------------------------------------------#
# Add MDSPAN + hpcpp demo
# ----------------------------------------------------------------------------------------#

message(STATUS "Adding mdspan-stdpar...")
add_subdirectory(mdspan-stdpar)

message(STATUS "Adding 1d-stencil...")
add_subdirectory(1d-stencil)

# ----------------------------------------------------------------------------------------#
# Add choleskey demo
# ----------------------------------------------------------------------------------------#
message(STATUS "Adding choleskey example...")
add_subdirectory(choleskey)

# ----------------------------------------------------------------------------------------#
# Add fft demo
# ----------------------------------------------------------------------------------------#
message(STATUS "Adding fft...")
add_subdirectory(fft)

# ----------------------------------------------------------------------------------------#
# Add block segmented prefixSum
# ----------------------------------------------------------------------------------------#
message(STATUS "Adding prefixSum...")
add_subdirectory(prefixSum)
