# ----------------------------------------------------------------------------------------#
# Add comm-study
# ----------------------------------------------------------------------------------------#

message(STATUS "Adding comm-study...")
add_subdirectory(comm-study)

# ----------------------------------------------------------------------------------------#
# Add heat equation demo
# ----------------------------------------------------------------------------------------#

message(STATUS "Adding heat-equation...")
add_subdirectory(heat-equation)

# ----------------------------------------------------------------------------------------#
# Add MDSPAN + hpcpp demo
# ----------------------------------------------------------------------------------------#

message(STATUS "Adding mdspan-stdpar...")
add_subdirectory(mdspan-stdpar)

# ----------------------------------------------------------------------------------------#
# Add 1d stencil demo
# ----------------------------------------------------------------------------------------#

message(STATUS "Adding 1d-stencil...")
add_subdirectory(1d-stencil)

# ----------------------------------------------------------------------------------------#
# Add cholesky demo
# ----------------------------------------------------------------------------------------#
message(STATUS "Adding cholesky example...")
add_subdirectory(cholesky)

# ----------------------------------------------------------------------------------------#
# Add fft demo
# ----------------------------------------------------------------------------------------#
message(STATUS "Adding fft...")
add_subdirectory(fft)

# ----------------------------------------------------------------------------------------#
# Add prefixSum demo
# ----------------------------------------------------------------------------------------#
message(STATUS "Adding prefixSum...")
add_subdirectory(prefixSum)

# ----------------------------------------------------------------------------------------#
# Add smith-waterman demo
# ----------------------------------------------------------------------------------------#
message(STATUS "Adding sw-adept...")
add_subdirectory(sw-adept)